[package]
name = "recursive-dice-roller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
clap = "4.1.8"
itertools = "0.10.5"
rand = "0.8.5"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }

# crossterm doesn't work on WASM but that's OKAY because we don't need it when
# rendering on the web anyway!s
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = "0.26.1"